修复后，包含 SQL/JSON/Shell 等 Markdown 代码块的最终答案不会再破坏外层 InterpretationPlan，规划器应直接进入 DAG 验证和工具执行，不再持续显示“Planner generated the next action”